<resources>
    <string name="app_name">Logicking</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_setting">SettingActivity</string>

    <string name="btn_reset">Reset</string>
    <string name="pref_settings">Settings</string>
    <string name="pref_graph_name">Name of the graph</string>
    <string name="pref_default_graph_name">Approximation</string>
    <string name="pref_accuracy">Set accuracy of graph</string>
    <string name="pref_boundaries">Set boundaries of graph</string>
    <string name="pref_boundariesX">Set X boundaries</string>
    <string name="pref_boundariesY">Set Y boundaries</string>
</resources>
